2007-12-31 Matvey Kozhev <sikon at users.sourceforge.net>

  * src/prefs.c:
  * src/prefs_window.c:
  * src/prefsdlg.c:
  * src/display_coverart.h:
  
    Renamed "colour" to "color". Added text color preference.

  * src/display_coverart.c:
  
    Fixed regression with CJK text rendering by using Pango to render.
	Performance improvement.
	
2007-12-30 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * data/cdshine.png
  * data/Makefile.am
  
  png file removed as highlight now done programmatically with cairo.
  
  * data/gtkpod.glade
  
  GtkDrawingArea added to coverart preview dialog for use with cairo.
  
  * src/display_coverart.c
  * src/display_coverart.h
  
  Refactored functions to use cairo for rendering coverart images
  rather than libgnomecanvas.
  
  * src/display_playlists.c
  * src/display_sorttabs.c
  * src/prefsdlg.c
  
  References to some coverart functions updated.
  
  * src/display.c
  
  Generic function for display preview dialog refactored to use cairo
  rather than libgnomecanvas.
  
  * src/fetchcover.h
  * configure.in
  * INSTALL

  References to libgnomecanvas removed.  
  
2007-12-30 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/man:
  
    Added manpage from Debian.

  * data/icons/gtkpod.xpm:
  * data/gtkpod.desktop.in:
  
    Added XPM icon from Debian (goes to /usr/share/pixmaps).
	
  * data/gtkpod.glade:
  
    Small fixes to the info window.
	
  * src/prefs.c:
  * src/prefs.h:
  * src/file_convert.c:
  
    Added new settings:
    - conversion_enable: skip any conversion if this is false (default: true)
	- conversion_target_format: format to convert to (default: MP3; only used in prefsdlg.c)
  
  * src/prefsdlg.c:
  
    Conversion preferences.
	Fixed a bug that prevented the dialog from being shown again if closed
	using the X button.
	
  * src/infodlg.c:
  
    New info window mockup ("Experimental" button in existing info window).

2007-12-30 P.G. Richardson <phantom_sf at users.sourceforge.net>
